--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "typescript": "^5.7.3",
     "web-vitals": "^4.2.4"
   }
 }
