--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1"
   },
