--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tsparticles/engine": "^3.9.1",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "express": "^5.1.0",
@@ -11,7 +12,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-slim": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
