--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Kevin Ritonga - Portofolio",
-  "name": "Kevin Ritonga - Portofolio",
+  "short_name": "Kevin Ritonga - Portfolio",
+  "name": "Kevin Ritonga - Portfolio",
   "icons": [
     {
       "src": "logo.svg",
